# readme-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  output_quality.md
.github/workflows/: ci.yml
src/readme_ai/: __init__.py  analyzer.py  cli.py  differ.py  generator.py  templater.py
tests/: test_analyzer.py  test_cli.py  test_differ.py  test_generator.py  test_templater.py  test_version.py
