[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-ai"
version = "0.1.0"
description = "AI-powered README generator — analyze your repo, generate a beautiful README"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "youmengde"}]
keywords = ["readme", "generator", "ai", "llm", "openai", "anthropic", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "openai>=1.0",
    "pathspec>=0.11",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
readme-ai = "readme_ai.cli:cli"

[project.urls]
Homepage = "https://github.com/youmengde/readme-ai"
Repository = "https://github.com/youmengde/readme-ai"
Issues = "https://github.com/youmengde/readme-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"
